--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -8,7 +8,7 @@ Your shopping cart
 <div class="container">
    <div class="p-4 m-4">
        <h1 class="mb-4">Your shopping cart</h1>
-       <div class="table-responsive">
+       <div class="table-responsive" height="50%">
                 <table cellpadding="30">
                     <thead>
                         <tr style="background-color: #2c83bc; color: white; height: 5%;">
