--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -5,10 +5,10 @@
 Your shopping cart
 {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container" height="20%">
    <div class="p-4 m-4">
        <h1 class="mb-4">Your shopping cart</h1>
-       <div class="table-responsive" height="50%">
+       <div class="table-responsive">
                 <table cellpadding="30">
                     <thead>
                         <tr style="background-color: #2c83bc; color: white; height: 5%;">
@@ -29,7 +29,7 @@ Your shopping cart
                             <td>{{forloop.counter}}</td>
                             <td>
                                     <a  href="{{ product.get_absolute_url }}">
-                                        <img style="height: 10%;" src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+                                        <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
                                     </a>
                             </td>
                             <td>{{ product.name }}</td>
